--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,17 +1,20 @@
 
 @font-face {
 	font-family: 'PlayfairDisplay';
-    font-weight: normal;
-    font-style: normal;
-	src: url('../fonts/PlayfairDisplay-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+	src: url('../Fonts/PlayfairDisplay-Regular.ttf');
 }
 
 body {
-	background-image: url('../img/Black-sand.jpeg');
+	background-image: url('../Img/Black-sand.jpeg');
 	background-repeat: no-repeat;
-    color: white;
+  color: white;
 }
 
+div {
+  height: auto;
+}
 /*Classes*/
 .btn {
   display: flex;
@@ -25,10 +28,6 @@ body {
   padding: 5px;
 }
 
-.btn:hover {
-	background-color: #293241;
-}
-
 .icon {
 	width: 35px;
 }
@@ -37,12 +36,34 @@ body {
 	background-color: #3d5a80;
 }
 
-
 .right {
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
+	background-color: red;
 }
 
+.left-p {
+	flex-direction: row-reverse;
+}
+
+.left {
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	background-color: blue;
+}
+
+.items {
+  background-color: #FFFFFF;
+  transition: 0.2s;
+}
+
+.items:hover {
+  background-color: #B4F8C8;
+}
+
+.selected {
+  background-color: #B4F8C8;
+}
 
 /*ID*/
 #heading-div {
@@ -58,25 +79,53 @@ body {
 
 }
 
+#main-div {
+  display: flex;
+  margin: 25px;
+}
+
+#content-div {
+  width: 350px;
+  font-family: 'PlayfairDisplay';
+  text-align: right;
+}
+
+#content-div h2 {
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+#content-div p {
+  font-size: 20px;
+}
+
 #container-div {
 	display: flex;
 	width: 760px;
 	margin: 0 auto;
 }
 
-#screen-div {
+#canvas-div {
 	background-color: #FFFFFF;
-	width: 700px;
-	height: 500px;
+	width: 570px;
+	height: 570px;
+  display: grid;
 }
 
 #menu-div {
 	width: 60px;
-	height: 370px;
+	height: 420px;
 	background-color: #343a40;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+#colorPickerHead {
+  width: 30px;
+	padding: 0;
+	border: 0;
 }
 
 #footer-div {
